--- a/cover.css
+++ b/cover.css
@@ -77,6 +77,7 @@ padding: 0 1.5rem;}
 }
 
 header.masthead.mb-auto {
+  margin-bottom: 20px;
 }
 
 .masthead-brand {
@@ -131,6 +132,11 @@ header.masthead.mb-auto {
 
 
 /*Carousel*/
+
+.bd-example{
+  margin-top: 20px;
+}
+
 .carousel-caption {
   padding-bottom: 10px;
 }
